Refactored whole project, moved drawing on map to MapViewer - added Yellow light color - added multiple route creation - added map refresh timer - added custom waypoints - refactored Router class - added Agent lists in SmartCityAgent - added WaywardCar (doesn't respect lights)

--- a/src/main/java/GUI/MapWindow.form
+++ b/src/main/java/GUI/MapWindow.form
@@ -34,10 +34,10 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="3606c" class="javax.swing.JButton" binding="addTestCarButton" default-binding="true">
+              <component id="19baa" class="javax.swing.JButton" binding="StartRouteButton">
                 <constraints/>
                 <properties>
-                  <text value="Add test car"/>
+                  <text value="Start vehicles"/>
                 </properties>
                 <clientProperties>
                   <hideActionText class="java.lang.Boolean" value="false"/>
