Add time picker to gui

--- a/frontend/src/styles/Menu.css
+++ b/frontend/src/styles/Menu.css
@@ -6,3 +6,11 @@
 .center-wrapper {
   text-align: center;
 }
+
+.form-check {
+  display: flex;
+  align-items: center;
+}
+.form-check-input {
+  margin-top: 2px;
+}
