--- a/frontend/src/styles/Light.css
+++ b/frontend/src/styles/Light.css
@@ -1,9 +1,15 @@
 @keyframes fadeInOut {
   0% {
-    opacity: 1;
+    box-shadow: 0 0 0 0 rgba(178, 34, 34, 0.8);
+    border-radius: 50%;
+  }
+  70% {
+    box-shadow: 0 0 0 20px rgba(146, 34, 34, 0);
+    border-radius: 50%;
   }
   100% {
-    opacity: 0;
+    box-shadow: 0 0 0 0 rgba(178, 34, 34, 0);
+    border-radius: 50%;
   }
 }
 
@@ -11,6 +17,6 @@
   animation-name: fadeInOut;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
-  animation-duration: 2s;
-  animation-direction: alternate;
+  animation-duration: 1500ms;
+  animation-direction: normal;
 }
