--- a/frontend/src/styles/CustomClock.css
+++ b/frontend/src/styles/CustomClock.css
@@ -1,8 +1,9 @@
 /*https://codepen.io/jasonleewilson/pen/gPrxwX*/
 #clock {
-  font: small-caps lighter 43px/150% "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+  font: small-caps lighter calc(10px + 2vw) "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial,
+    sans-serif;
   text-align: left;
   color: #fff;
   border-left: 3px solid #ed1f24;
-  padding-left: 20px;
+  padding-left: calc(10px + 0.5vw);
 }
