--- a/frontend/src/styles/Bus.css
+++ b/frontend/src/styles/Bus.css
@@ -18,9 +18,7 @@
   font-size: 40px;
   font-weight: bold;
   color: rgb(17, 16, 13);
-}
-
-.trans-popup .leaflet-popup-content {
+  user-select: none;
 }
 
 .trans-popup .leaflet-popup-tip-container {
