--- a/frontend/src/styles/Bus.css
+++ b/frontend/src/styles/Bus.css
@@ -1,11 +1,20 @@
 .crashed {
-  filter: grayscale(100%);
+  filter: grayscale(100) opacity(90) brightness(1.75);
 }
 
 .trans-popup {
   bottom: 0;
   margin: 0;
   left: 0;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(359deg);
+  }
 }
 
 .trans-popup .leaflet-popup-content-wrapper {
@@ -19,6 +28,7 @@
   font-weight: bold;
   color: rgb(17, 16, 13);
   user-select: none;
+  animation: rotation 4s infinite linear;
 }
 
 .trans-popup .leaflet-popup-tip-container {
