Css code cleanup.

--- a/frontend/src/styles/Menu.css
+++ b/frontend/src/styles/Menu.css
@@ -33,27 +33,8 @@
   border: 3px solid red;
 }
 
-.gp-label {
-  vertical-align: middle;
-  width: 100%;
-}
-.gp-left {
+.gp-wrapper {
   margin: 0;
-  padding-right: 1px;
-}
-
-.gp-right {
-  flex: 1 1 auto;
-}
-
-.gp-right,
-.gp-right-up,
-.gp-right-down {
-  margin: 0;
-  padding: 0;
-}
-
-#gp-wrapper {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
