--- a/frontend/src/styles/Menu.css
+++ b/frontend/src/styles/Menu.css
@@ -18,7 +18,13 @@
 
 .small-text {
   font-size: calc(7px + 0.8vmin);
-  line-height: calc(1.8 * (7px + 0.8vmin));
+  line-height: calc(1.7 * (7px + 0.8vmin));
+}
+
+/* Height adjustment - relative to font-size */
+.custom-switch {
+  line-height: calc(1.1 * (10px + 1vmin));
+  margin-bottom: 0.8rem;
 }
 
 .neg-mt2 {
