--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,5 +1,5 @@
 .App-header {
-  background-color: #284c44; /* #282c34*/
+  background-color: #284c44;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
